# ChangeLog for app-shells/auto-fu-zsh
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*auto-fu-zsh-0.0.1.12-r1 (16 Aug 2012)

  28 Sep 2012; Martin Väth <martin@mvath.de>
  Bump to EAPI=5

  16 Aug 2012; Martin Väth <martin@mvath.de>
  Make Ctrl-D return correctly (and optionally act as kill{-whole,}-line)
  Restore default color after accept-line; fix compatibility with earlier
  zsh versions

*auto-fu-zsh-0.0.1.12 (12 Aug 2012)

  14 Aug 2012; Martin Väth <martin@mvath.de>
  Improve comments.

  12 Aug 2012; Martin Väth <martin@mvath.de>
  Write ebuild from scratch.