@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*auto-fu-zsh-99999999 (04 Nov 2012)
+
+  04 Nov 2012; Martin Väth <martin@mvath.de>
+  Provide git version which works nicely with zsh-syntax-highlighting
+
 *auto-fu-zsh-0.0.1.12-r1 (16 Aug 2012)
 
   28 Sep 2012; Martin Väth <martin@mvath.de>
